--- a/site_signal/src/components/Header/header.css
+++ b/site_signal/src/components/Header/header.css
@@ -6,22 +6,22 @@
 }
 
 .hdrTextContainer {
-    margin: 0 10% 0 10%;
+    margin: 0 5% 0 5%;
     color: white;
     text-align: center;
 }
 
 .hdrTextContainer h1 {
     font-family: "Scada";
-    font-size: 72px; 
+    font-size: 56px; 
     font-weight: bold;
-    padding-top: 108px;
+    padding-top: 156px;
 }
 
 .hdrTextContainer p {
     margin-top: 32px;
     font-family: "Saira";
-    font-size: 28px;
+    font-size: 24px;
 }
 
 .hdrSocialMediaContainer {
@@ -36,6 +36,11 @@
     writing-mode:vertical-rl;
     color: white;
     margin-bottom: 90%;
+}
+
+.hdrSocialMediaContainer img:hover {
+    transform: scale(1.3);
+    transition: transform 0.5s;
 }
 
 .hdrBorder {
@@ -56,7 +61,7 @@
 @media screen and (min-width: 320px) and (max-width: 480px) {
 
     .hdrContainer {
-        height: 352px;
+        height: 460px;
     }
 
     .hdrTextContainer {
@@ -65,7 +70,7 @@
 
     .hdrTextContainer h1 {
         text-align: left;
-        padding-top: 24px;
+        padding-top: 96px;
         font-size: 28px;
     }
 
@@ -83,18 +88,18 @@
 @media screen and (min-width: 481px) and (max-width: 768px) {
 
     .hdrContainer {
-        height: 640px;
+        height: 600px;
     }
 
     .hdrTextContainer h1 {
         text-align: left;
-        padding-top: 24px;
-        font-size: 64px;
+        padding-top: 108px;
+        font-size: 44px;
     }
 
     .hdrTextContainer p {
         text-align: left;
-        font-size: 24px;
+        font-size: 20px;
     }
 
     .hdrSocialMediaContainer {
@@ -103,8 +108,32 @@
 
 }
 
-/** Laptops **/
-@media screen and (min-width: 769px) and (max-width: 1200px) {
+/** Laptops: Large Screen **/
+@media screen and (min-width:769px) and (max-width: 1023px) {
+
+    .hdrContainer {
+        height: 700px;
+    }
+
+    .hdrTextContainer {
+        margin: 0 5%;
+    }
+
+    .hdrTextContainer h1 {
+        font-size: 48px;
+    }
+
+    .hdrTextContainer p {
+        font-size: 20px;
+    }
+
+    .hdrSocialMediaContainer {
+        padding-top: 10%;
+    }
+}
+
+/** Laptops: Large Screen **/
+@media screen and (min-width: 1024px) and (max-width: 1366px) {
 
     .hdrContainer {
         height: 720px;
@@ -114,15 +143,14 @@
         margin: 0 5%;
     }
 
-    .hdrTextContainer h1 {
-        font-size: 64px;
-    }
-
-    .hdrTextContainer p {
-        font-size: 24px;
-    }
-
     .hdrSocialMediaContainer {
         padding-top: 5%;
     }
+
+}
+
+/** Desktop: Extra Large Screens **/
+
+@media screen and (min-width: 1921px) {
+    
 }
