--- a/site_signal/src/components/Header/header.css
+++ b/site_signal/src/components/Header/header.css
@@ -57,6 +57,8 @@
     transform: scaleX(-1);
 }  
 
+/* Responsividade */
+
 /** Mobile **/
 @media screen and (min-width: 320px) and (max-width: 480px) {
 
@@ -149,8 +151,8 @@
 
 }
 
-/** Desktop: Extra Large Screens **/
+/** Desktop: Extra Large Screen **/
 
 @media screen and (min-width: 1921px) {
-    
+
 }
