--- a/site_signal/src/components/TeamPage/CoreValues/core-values.css
+++ b/site_signal/src/components/TeamPage/CoreValues/core-values.css
@@ -1,4 +1,5 @@
 .coreValuesContainer {
+    position: relative;
     background-color: #F6F6F6;
     background-image: url("../../../assets/svg/img.core-values-bg.svg");
     background-position: right;
@@ -50,7 +51,7 @@
 
 /* Responsividade */
 
-/* Mobile */
+/* Mobile & Tablets */
 @media screen and (min-width: 320px) and (max-width: 768px) {
 
     .coreValuesContainer {
@@ -84,7 +85,7 @@
 }
 
 /* Laptops */
-@media screen and (min-width: 769px) and (max-width: 1200px) {
+@media screen and (min-width: 769px) and (max-width: 1366px) {
 
     .valueCardsContainer {
         display: flex;
