--- a/site_signal/src/components/TeamPage/ValueCard/value-card.css
+++ b/site_signal/src/components/TeamPage/ValueCard/value-card.css
@@ -54,7 +54,7 @@
 
 /* Responsividade */
 
-/* Mobile */
+/** Mobile & Tablets **/
 @media screen and (min-width: 320px) and (max-width: 768px) {
 
     .valueCard {
@@ -66,8 +66,8 @@
     }
 }
 
-/* Laptops */
-@media screen and (min-width: 769px) and (max-width: 1200px) {
+/** Laptops **/
+@media screen and (min-width: 769px) and (max-width: 1366px) {
     
     .valueCard {
         display: flex;
@@ -105,4 +105,10 @@
         text-align: left;
         font-size: 20px;
     }
+
+}
+
+/** Desktop: Extra Large Screen **/
+@media screen and (min-width: 1921px) {
+
 }
