--- a/site_signal/src/components/Footer/footer.css
+++ b/site_signal/src/components/Footer/footer.css
@@ -190,16 +190,31 @@
     }
 }
 
-@media screen and (min-width: 2101px) and (max-width: 2300px) {
+@media screen and (min-width: 2101px) and (max-width: 2224px) {
 
     .footerBorder {
-        margin-bottom: -650px;
+        margin-bottom: -628px;
     }
 }
 
-@media screen and (min-width: 2301px) and (max-width: 2600px) {
+@media screen and (min-width: 2225px) and (max-width: 2300px) {
 
     .footerBorder {
-        margin-bottom: -690px;
+        margin-bottom: -640px;
     }
 }
+
+@media screen and (min-width: 2301px) and (max-width: 2400px) {
+
+    .footerBorder {
+        margin-bottom: -660px;
+    }
+}
+
+@media screen and (min-width: 2401px) and (max-width: 2560px) {
+
+    .footerBorder {
+        margin-bottom: -685px;
+    }
+}
+
