--- a/site_signal/src/components/TeamPage/TeamList/teamList.css
+++ b/site_signal/src/components/TeamPage/TeamList/teamList.css
@@ -1,6 +1,6 @@
 .teamListContainer {
     position: relative;
-    padding: 32px 10% 0 10%;
+    padding: 32px 10% 10% 10%;
     background-repeat: no-repeat;
     background-color: #F6F6F6;
     text-align: center;
